--- a/src/global.scss
+++ b/src/global.scss
@@ -64,7 +64,7 @@ $secondary-color: #683d00;
 
   //padding: 10px;
 
-  > canvas {
+  canvas {
     height: 100vh;
     width: 100vw;
   }
@@ -82,4 +82,35 @@ $secondary-color: #683d00;
 
 .App {
   min-height: 100vh;
+}
+
+
+
+.text1-container {
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  padding: 5px;
+}
+
+.text1 {
+  color: white;
+
+}
+
+.text2-container {
+  position: absolute;
+  z-index: 999;
+  bottom: 0;
+  right: 0;
+  padding: 5px;
+
+}
+.text2 {
+  color: white;
+  a {
+    color: white;
+    text-decoration: none;
+  }
 }
