--- a/src/global.scss
+++ b/src/global.scss
@@ -129,6 +129,9 @@ $secondary-color: #683d00;
   bottom: 0;
   left: 0;
   padding: 5px;
+  display: flex;
+  align-content: flex-start;
+  justify-content: flex-start;
 
 }
 .text3 {
@@ -137,6 +140,10 @@ $secondary-color: #683d00;
   //  color: white;
   //  text-decoration: none;
   //}
+}
+
+.text4 {
+  display:flex;
 }
 
 // todo check that probably don't need important
