--- a/src/global.scss
+++ b/src/global.scss
@@ -77,9 +77,11 @@ $secondary: #333;
   z-index: 99;
 
   img {
+    //padding: 10vw;
     width: 100%;
-    height: auto;
-    max-height: 50vh;
+    height: 100%;
+    padding: 5px;
+    //max-height: 50vh;
   }
 }
 
@@ -151,9 +153,10 @@ $secondary: #333;
 
 // todo check that probably don't need important
 #simple-modal-description {
+  flex: 1 0;
   display: block !important;
-  overflow-y: scroll !important;
-  max-height: 20vh !important;
+  //overflow-y: scroll !important;
+  //max-height: 20vh !important;
 }
 
 .pointer {
