--- a/src/global.scss
+++ b/src/global.scss
@@ -260,6 +260,9 @@ $secondary: #333;
 .settings-according {
   display: flex !important;
   flex-direction: column !important;
+  left: 0 !important;
+  position: absolute !important;
+  width: 100% !important;
 
   //box-shadow: none !important;
   //background-color: 'white' !important;
