Hide displayMode when using gallery, and change selected to be a black outline

--- a/src/global.scss
+++ b/src/global.scss
@@ -238,7 +238,8 @@ $secondary: #333;
   cursor: pointer;
 
   &--active {
-    background-color: black;
+    //background-color: black;
+    border: 2px solid black;
   }
 }
 
