--- a/src/global.scss
+++ b/src/global.scss
@@ -297,3 +297,16 @@ $secondary: #333;
 .shareLinkLabel {
   margin-bottom: 5px !important;
 }
+
+.fixedSettingsTag {
+  position: sticky;
+  top:0;
+  left: 0;
+  background-color: white;
+  padding-top: 15px;
+  z-index: 10;
+}
+
+.closeModalButton {
+  margin-top: 15px !important;
+}
